HVAC Backup 2/objects/Scope_of_Work__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPR</fullName>
                    <label>Operating Contract</label>
                </value>
                <value>
                    <fullName>RPC</fullName>
                    <label>Risk Protection Contract</label>
                </value>
                <value>
                    <fullName>CEC</fullName>
                    <label>Compressor Excluded Contract</label>
                </value>
                <value>
                    <fullName>LBR</fullName>
                    <label>Labour Contract</label>
                </value>
                <value>
                    <fullName>ORC</fullName>
                    <label>Operating and Risk Protection Contract</label>
                </value>
                <value>
                    <fullName>PMC</fullName>
                    <label>Preventive Maintenance Contract</label>
                </value>
                <value>
                    <fullName>OLC</fullName>
                    <label>Operating and Labour Contract</label>
                </value>
                <value>
                    <fullName>EFM</fullName>
                    <label>Engineering Facility Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segament__c</fullName>
        <label>Customer Segament</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agri</fullName>
                </value>
                <value>
                    <fullName>Airports</fullName>
                </value>
                <value>
                    <fullName>Auto &amp; autoancillaries</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Builders</fullName>
                </value>
                <value>
                    <fullName>Cement</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Cinema Theatres/Multiplex</fullName>
                </value>
                <value>
                    <fullName>Commercial Complex</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Data center</fullName>
                </value>
                <value>
                    <fullName>Defence</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical &amp; Electronics</fullName>
                </value>
                <value>
                    <fullName>Electrical Machinery</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Engineering goods &amp; machinery</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>FMCG</fullName>
                </value>
                <value>
                    <fullName>GeneralContractor</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hospitals</fullName>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                </value>
                <value>
                    <fullName>Malls</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Industrial</fullName>
                </value>
                <value>
                    <fullName>Marriage Hall/Auditorium</fullName>
                </value>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Scope of Work</relationshipLabel>
        <relationshipName>Scope_of_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <label>Product Families</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Family__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Product Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Scope of Work</relationshipLabel>
        <relationshipName>Scope_of_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scope of Work</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Product_Families__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Segment__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope of Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>